syntax = "proto3";

option csharp_namespace = "AElf.Contracts.Genesis";

import "hash.proto";

message ContractInfo
{
    Hash Owner = 1;
    uint64 SerialNumber = 2;
}